--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,12 @@ services:
     networks:
       - mongo-network
     healthcheck:
-      test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo -u mongo -p mongo --quiet) -eq 1
+      test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo --quiet) -eq 1
       interval: 10s
       start_period: 30s
-    command: ["--replSet", "dbrs", "--bind_ip_all"]
+    command: [ "mongod", "--noauth", "--replSet", "dbrs", "--bind_ip_all" ]
+    volumes:
+      - ./source-data:/data/db
 
   mongo_target:
     image: mongo:4.4
@@ -26,10 +28,12 @@ services:
     networks:
       - mongo-network
     healthcheck:
-      test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo -u mongo -p mongo --quiet) -eq 1
+      test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo --quiet) -eq 1
       interval: 10s
       start_period: 30s
-    command: [ "--replSet", "dbrs", "--bind_ip_all" ]
+    command: [ "mongod", "--noauth", "--replSet", "dbrs", "--bind_ip_all" ]
+    volumes:
+      - ./source-data:/data/db
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.2
