--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,14 @@ services:
       - "27017:27017"
     networks:
       - mongo-network
+#      - localnet
     healthcheck:
       test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo --quiet) -eq 1
       interval: 10s
       start_period: 30s
     command: [ "mongod", "--noauth", "--replSet", "dbrs", "--bind_ip_all" ]
     volumes:
-      - ./source-data:/data/db
+      - ./source-data-source:/data/db
 
   mongo_target:
     image: mongo:4.4
@@ -27,17 +28,23 @@ services:
       - "27018:27017"
     networks:
       - mongo-network
+#      - localnet
     healthcheck:
       test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo --quiet) -eq 1
       interval: 10s
       start_period: 30s
     command: [ "mongod", "--noauth", "--replSet", "dbrs", "--bind_ip_all" ]
     volumes:
-      - ./source-data:/data/db
+      - ./source-data-target:/data/db
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.2
+    hostname: zookeeper
     container_name: zookeeper
+    ports:
+      - "2181:2181"
+#    networks:
+#      - localnet
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -45,10 +52,14 @@ services:
   kafka-broker:
     image: confluentinc/cp-kafka:7.3.2
     container_name: broker
+    hostname: broker
     ports:
+      - "29092:29092"
       - "9092:9092"
     depends_on:
       - zookeeper
+#    networks:
+#      - localnet
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
@@ -57,6 +68,25 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+
+# Падает через какое-то время работы
+  schema-registry:
+    image: confluentinc/cp-schema-registry:latest
+    hostname: schema-registry
+    container_name: schema-registry
+    depends_on:
+      - zookeeper
+      - kafka-broker
+    ports:
+      - "8081:8081"
+#    networks:
+#      - localnet
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
+
 networks:
   mongo-network:
     driver: bridge
+  localnet:
+    attachable: true
