mongo-init.js added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,14 @@ services:
       - "27017:27017"
     networks:
       - mongo-network
-#      - localnet
+#    environment:
+#      - MONGODB_USER=mongo
+#      - MONGODB_PASSWORD=mongo
+#      - MONGO_INITDB_DATABASE=test
+
+#      - MONGO_INITDB_ROOT_USERNAME=mongo
+#      - MONGO_INITDB_ROOT_PASSWORD=mongo
+#      - MONGO_INITDB_DATABASE=test
     healthcheck:
       test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo --quiet) -eq 1
       interval: 10s
@@ -18,6 +25,10 @@ services:
     command: [ "mongod", "--noauth", "--replSet", "dbrs", "--bind_ip_all" ]
     volumes:
       - ./source-data-source:/data/db
+      - ./scripts/mongo_source/init/:/docker-entrypoint-initdb.d
+      - ./scripts/mongo_source/init:/home/mongodb
+      - ./scripts/mongo_source/seed/:/home/mongodb/seed
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
   mongo_target:
     image: mongo:4.4
@@ -28,7 +39,10 @@ services:
       - "27018:27017"
     networks:
       - mongo-network
-#      - localnet
+    environment:
+      - MONGODB_USER=admin
+      - MONGODB_PASSWORD=admin
+      - MONGO_INITDB_DATABASE=test
     healthcheck:
       test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo --quiet) -eq 1
       interval: 10s
@@ -36,15 +50,28 @@ services:
     command: [ "mongod", "--noauth", "--replSet", "dbrs", "--bind_ip_all" ]
     volumes:
       - ./source-data-target:/data/db
+      - ./scripts/mongo_target/init/:/docker-entrypoint-initdb.d
+      - ./scripts/mongo_target/init:/home/mongodb
+      - ./scripts/mongo_target/seed/:/home/mongodb/seed
+
+  jaeger:
+    image: jaegertracing/all-in-one:1
+    ports:
+      - 6831:6831/udp
+      - 16686:16686
+    networks:
+      - mongo-network
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.2
     hostname: zookeeper
     container_name: zookeeper
     ports:
-      - "2181:2181"
-#    networks:
-#      - localnet
+      - 2181:2181
+      - 2888:2888
+      - 3888:3888
+    networks:
+      - mongo-network
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -58,8 +85,8 @@ services:
       - "9092:9092"
     depends_on:
       - zookeeper
-#    networks:
-#      - localnet
+    networks:
+      - mongo-network
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
@@ -69,24 +96,6 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
-# Падает через какое-то время работы
-  schema-registry:
-    image: confluentinc/cp-schema-registry:latest
-    hostname: schema-registry
-    container_name: schema-registry
-    depends_on:
-      - zookeeper
-      - kafka-broker
-    ports:
-      - "8081:8081"
-#    networks:
-#      - localnet
-    environment:
-      SCHEMA_REGISTRY_HOST_NAME: schema-registry
-      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
-
 networks:
   mongo-network:
     driver: bridge
-  localnet:
-    attachable: true
