--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,7 @@ services:
   debezium_connect:
     container_name: debezium_connect
     image: quay.io/debezium/connect:2.1
+    restart: always
     ports:
       - "8083:8083"
     links:
