--- a/scripts/mongo_source_config.json
+++ b/scripts/mongo_source_config.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongo-sink",
+  "name": "mongo-source",
   "config": {
     "connector.class":"io.debezium.connector.mongodb.MongoDbConnector",
     "topic.prefix": "test",
