add depends_on: kafka to debezium_connect

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,8 @@ services:
       - STATUS_STORAGE_TOPIC=my_connect_statuses
     networks:
       - localnet
+    depends_on:
+      - kafka
 
   kafka-ui:
     container_name: kafka-ui
